# rabbit-borough

./: CARGO.md  CHANGELOG.md  CRATE.md  Cargo.toml  LICENSE  README.md  config.json  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
examples/: consumer.rs  consumer_r2d2.rs  consumer_wo.rs  publisher.rs  publisher_with_type.rs
src/: lib.rs  main.rs
src/configuration/: config_model.rs  mod.rs  reader.rs
src/consumer/: actions.rs  connection_manager.rs  consumer.rs  consumer_configuration.rs  handle_message_result.rs  handler_message_result.rs  mod.rs  setup.rs
src/publisher/: actions.rs  mod.rs  publisher.rs
