[package]
name = "rabbit_borough"
version = "0.1.3-beta"
authors = ["stefanos.kouroupis <manekato@gmail.com>"]
edition = "2018"
description = "Create a RabbitMQ consumer project with minimal effort, by bypassing templating, configuration and complicated resiliency logic"
readme = "CARGO.md"
documentation = "https://docs.rs/rabbit_borough"
repository = "https://github.com/elasticrash/rabbit-borough"
license = "MIT"
keywords = ["rabbitmq", "amqp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lapin = "1.0.2"
futures-executor = "0.3.5"
futures = "0.3.5"
serde = "1.0.110"
serde_json = "1.0.53"