[package]
name = "rabbit_borough"
version = "0.1.5"
authors = ["stefanos.kouroupis <manekato@gmail.com>"]
edition = "2018"
description = "Create a RabbitMQ consumer project with minimal effort, by bypassing templating, configuration and complicated resiliency logic"
readme = "CRATE.md"
documentation = "https://docs.rs/rabbit_borough"
repository = "https://github.com/elasticrash/rabbit-borough"
license = "MIT"
keywords = ["rabbitmq", "amqp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lapin = "1.2.1"
futures-executor = "0.3.5"
futures = "0.3.5"
serde = "1.0.110"
serde_json = "1.0.53"
amq-protocol-types = "6.0.0-rc12"

[dev-dependencies]
postgres = "0.17.3"
r2d2_postgres = "0.16.0"
r2d2 = "0.8.8"

