[package]
name = "rabbit_borough"
version = "0.1.7"
authors = ["stefanos.kouroupis <manekato@gmail.com>"]
edition = "2018"
description = "Create a RabbitMQ consumer project with minimal effort, by bypassing templating, configuration and complicated resiliency logic"
readme = "CRATE.md"
documentation = "https://docs.rs/rabbit_borough"
repository = "https://github.com/elasticrash/rabbit-borough"
license = "MIT"
keywords = ["rabbitmq", "amqp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lapin = "2.1.1"
futures-lite = "1.12.0"
serde = "1.0.145"
serde_json = "1.0.85"
amq-protocol-types = "7.0.1"

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
postgres = "0.19.4"
r2d2_postgres = "0.18.1"
r2d2 = "0.8.10"
